improved dealing with executors and shutdowns at abort or end test, improved logging, fixed some PMD rule issues such as adding equals and hashcode